把一些属于逻辑的功能移除GUI